--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -101,6 +101,7 @@
 								<% end # if ChoiceQuestion %>
 							
 							<% elsif element.assetable_type == "TextQuestion" %>
+								<%= label_tag "response[raw_responses_attributes][#{index}][answer]", "Answer for question #{question_number}", :style => "display: none" %>
 								<% if element.assetable.answer_type == "field" %>
 									<span class="voctextfield"><%= text_field_tag "response[raw_responses_attributes][#{index}][answer]", nil, :class => "text_question_field question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == "area" %>
