Fix missing question content for matrix questions

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -27,7 +27,7 @@
 						end %>
 						<% if element.assetable_type == "MatrixQuestion" %>
 							<% if element.assetable_type != 'Asset'  %>
-								<span class="vocquestionnumber"><%= "#{question_number}." %></span>
+								<span class="vocquestionnumber"><%= "#{question_number}." %></span><%= element.assetable.question_content.statement %>
 							<% end %>
 			              <table>
 			                <tr>
