--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -46,7 +46,8 @@
 			                    <% row_header.choice_answers.each do |a| %>
 			                      <td>
 			                      <%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", row_header.question_content.id %>
-			                      <%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", a.id, false, :class => "question_#{row_header.question_content.id}_answer" %>
+														<%= label_tag "response_raw_responses_attributes_#{index}_answer_#{a.id}", "a.answer", :style => "display:none" %>
+			                      <%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", a.id, false, :class => "question_#{row_header.question_content.id}_answer", :id => "response_raw_responses_attributes_#{index}_answer_#{a.id}" %>
 			                      </td>
 			                    <% end %>
 			                  </tr>
