--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -126,13 +126,24 @@ function show_next_page(page){
   required_unanswered = check_for_unanswered_required(page);
   
   if (!required_unanswered){
-    jQuery("#page_" + page).hide();
+    _currPage = jQuery("#page_" + page);
+    _currPage.hide();
+    _currPage.removeClass("current_page");
+    _currPage.addClass("hidden_page");
+
+
     var next_page = jQuery("#page_" + page + "_next_page").val();
     
     /* Set the prev page on next page */
    set_prev_page(page, next_page);
     
-    jQuery("#page_"+ next_page).show();  
+   _nextPage = jQuery("#page_" + next_page);
+
+    _nextPage.show();
+
+    _nextPage.addClass("current_page");
+    _nextPage.removeClass("hidden_page");
+
     window.location.hash="PAGE_" + next_page;
   } else {
     alert('Please answer all required questions before moving on to the next page.');
