--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -58,7 +58,14 @@
 							<%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", element.assetable.question_content.id %>
 							<%= hidden_field_tag "q_#{element.assetable.question_content.id}_required", element.assetable.question_content.required, :class => "required_question" %>
 							
-							<div class="vocquestiontext"><span class="vocquestionnumber"><%= "#{question_number}." %> </span><%= element.assetable.question_content.statement %>
+							<% if element.assetable.answer_type == ChoiceAnswer::DROPDOWN
+								select_tag_id = "response[raw_responses_attributes][#{index}][answer]"
+							   elsif element.assetable.answer_type == ChoiceAnswer::MULTISELECT
+							   	select_tag_id = "response[raw_responses_attributes][#{index}][answer][]"
+							   end -%>
+
+							<div class="vocquestiontext"><span class="vocquestionnumber"><%= "#{question_number}." %> </span>
+							<%= select_tag_id ? label_tag(select_tag_id, element.assetable.question_content.statement) : element.assetable.question_content.statement %>
 							<%= "*" if element.assetable.question_content.required%></div>
 							<% if element.assetable_type == "ChoiceQuestion" %>
 								<% if element.assetable.answer_type == ChoiceAnswer::RADIO 
@@ -77,12 +84,12 @@
 										<% end -%>
 									</div>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::DROPDOWN %>
-									<span class="vocdropdown"><%= select_tag "response[raw_responses_attributes][#{index}][answer]", 
+									<span class="vocdropdown"><%= select_tag select_tag_id, 
 										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
 										:include_blank => true, :onchange => generate_next_page_on_change(element), 
 										:class => "question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::MULTISELECT %>
-								  <span class="vocmultiselect"><%= select_tag "response[raw_responses_attributes][#{index}][answer][]", 
+								  <span class="vocmultiselect"><%= select_tag select_tag_id, 
 										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
 										:multiple => true, 
 										:style => "width: 100px", 
