--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,4 +1,4 @@
-<%# title @survey.name %>
+<% title @survey.name + " - " + "Page 1 - " + @survey.survey_type.name.titleize %>
 
 <!-- <p class="pageTitle">View Survey</p> -->
 
@@ -16,6 +16,7 @@
 			<% question_number = 0 %>
 			<div class="<%= page.page_number == (params[:page].present? ? params[:page].to_i : 1) ? 'current_page' : 'hidden_page' %>" id="page_<%=page.page_number%>">
 				<a name="PAGE_<%= page.page_number%>"></a>
+				
 	      <%= hidden_field_tag :next_page, page.next_page.try(:page_number), :id => "page_#{page.page_number}_next_page" %>
 				<%= hidden_field_tag :prev_page, (params[:page].present? && params[:page].to_i == page.page_number ? 1 : page.prev_page.try(:page_number)), :id => "page_#{page.page_number}_prev_page" %>
 				
