WCD-460: removing configs.  Removing script tags from JS.  Updating title within JS. Using string replacement vs. string concatenation in view.

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,4 +1,4 @@
-<% title @survey.name + " - " + "Page 1 - " + @survey.survey_type.name.titleize %>
+<% title "#{@survey.name} - Page 1 - #{@survey.survey_type.name.titleize}" %>
 
 <!-- <p class="pageTitle">View Survey</p> -->
 
