--- a/app/views/surveys/poll_results.html.erb
+++ b/app/views/surveys/poll_results.html.erb
@@ -1,3 +1,5 @@
+<% title "#{@survey.name} - Poll Results - #{@survey.survey_type.name.titleize}" %>
+
 <div id='poll_results_title'>Poll Results</div>
 
 <div id="poll_results">
