--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 			</style>
 		<% end %>
     <%= javascript_include_tag :defaults %>
-    <%= javascript_include_tag 'gatc-survey' %>
+    <%= javascript_include_tag '/scripts/gatc-survey' %>
   
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
