fixing polls re: dynamic titles

--- a/app/views/surveys/poll_results.html.erb
+++ b/app/views/surveys/poll_results.html.erb
@@ -1,16 +1,16 @@
-<% title "#{@survey.name} - Poll Results - #{@survey.survey_type.name.titleize}" %>
+<% title "#{survey.name} - Poll Results - #{survey.survey_type.name.titleize}" %>
 
 <div id='poll_results_title'>Poll Results</div>
 
 <div id="poll_results">
-  <% @results.questions.each do |question| %>
-    <% total_answers = @results.total_answers_for_question(question) %>
+  <% results.questions.each do |question| %>
+    <% total_answers = results.total_answers_for_question(question) %>
     <div class="question_results">
 
       <div class="question_statement"><%= question.question_content.statement %> ( <%= total_answers %> responses) </div>
 
       <div class="poll_answers">
-        <% @results.answer_counts_for_question(question).first(10).each do |answer, answer_count| %>
+        <% results.answer_counts_for_question(question).first(10).each do |answer, answer_count| %>
           <% answer_percent = total_answers == 0 ? 0 : ((answer_count.to_f / total_answers.to_f) * 100) %>
           <div class="poll_answer">
               <div style="display: inline-block; max-width: 15%">
