--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -16,16 +16,16 @@
 			<% question_number = 0 %>
 			<div class="<%= page.page_number == (params[:page].present? ? params[:page].to_i : 1) ? 'current_page' : 'hidden_page' %>" id="page_<%=page.page_number%>">
 				<a name="PAGE_<%= page.page_number%>"></a>
-				
+
 	      <%= hidden_field_tag :next_page, page.next_page.try(:page_number), :id => "page_#{page.page_number}_next_page" %>
 				<%= hidden_field_tag :prev_page, (params[:page].present? && params[:page].to_i == page.page_number ? 1 : page.prev_page.try(:page_number)), :id => "page_#{page.page_number}_prev_page" %>
-				
+
 				<%= hidden_field_tag "survey_version_id", @survey_version.id %>
 				<ul class="showList">
 				<% page.survey_elements.order("element_order asc").each do |element| %>
 					<li class="outter">
 						<% if element.assetable_type != 'Asset'
-							 question_number =+ question_number + 1  
+							 question_number =+ question_number + 1
 						end %>
 						<% if element.assetable_type == "MatrixQuestion" %>
 							<% if element.assetable_type != 'Asset'  %>
@@ -58,7 +58,7 @@
 						<% elsif element.assetable_type != "Asset" %>
 							<%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", element.assetable.question_content.id %>
 							<%= hidden_field_tag "q_#{element.assetable.question_content.id}_required", element.assetable.question_content.required, :class => "required_question" %>
-							
+
 							<% if element.assetable.answer_type == ChoiceAnswer::DROPDOWN or element.assetable_type == "TextQuestion"
 								answer_tag_id = "response[raw_responses_attributes][#{index}][answer]"
 							   elsif element.assetable.answer_type == ChoiceAnswer::MULTISELECT
@@ -69,14 +69,14 @@
 							<%= answer_tag_id ? label_tag(answer_tag_id, element.assetable.question_content.statement) : element.assetable.question_content.statement %>
 							<%= "*" if element.assetable.question_content.required%></div>
 							<% if element.assetable_type == "ChoiceQuestion" %>
-								<% if element.assetable.answer_type == ChoiceAnswer::RADIO 
+								<% if element.assetable.answer_type == ChoiceAnswer::RADIO
 									choice_a_size = (element.assetable.choice_answers.map {|x| x.answer}).join('----').size
 									%>
 									<div class="vocradios<%= choice_a_size <= 90 ? 'short' : 'long' %><%= element.assetable.answer_placement ? " place_vert" : " place_horiz" %>">
 										<% for answer in element.assetable.choice_answers %>
 											<span class="vocradio"><%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
 	                      						:onclick => generate_onclick(element, page, answer),
-												:class => "question_#{element.assetable.question_content.id}_answer", 
+												:class => "question_#{element.assetable.question_content.id}_answer",
 												:checked => answer.is_default || (params[element.assetable.statement.gsub('?', '').gsub(' ', '_').downcase.to_s] == answer.answer),
 												:id => "response_raw_responses_attributes_#{index}_answer_#{answer.id}"
 											%>
@@ -85,25 +85,25 @@
 										<% end -%>
 									</div>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::DROPDOWN %>
-									<span class="vocdropdown"><%= select_tag answer_tag_id, 
+									<span class="vocdropdown"><%= select_tag answer_tag_id,
 										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
-										:include_blank => true, :onchange => generate_next_page_on_change(element), 
+										:include_blank => true, :onchange => generate_next_page_on_change(element),
 										:class => "question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::MULTISELECT %>
-								  <span class="vocmultiselect"><%= select_tag answer_tag_id, 
+								  <span class="vocmultiselect"><%= select_tag answer_tag_id,
 										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
-										:multiple => true, 
-										:style => "width: 100px", 
+										:multiple => true,
+										:style => "width: 100px",
 										:class => "question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::CHECKBOX
 									choice_a_size = (element.assetable.choice_answers.map {|x| x.answer}).join('----').size
 									%>
 									<div class="voccheckboxes<%= choice_a_size <= 90 ? 'short' : 'long' %><%= element.assetable.answer_placement ? " place_vert" : " place_horiz" %>">
 									  <% for answer in element.assetable.choice_answers %>
-											<span class="voccheckbox"><%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", 
-																				  	answer.id, 
-																				  	false, 
-																				  	:id => "answer_#{answer.id}", 
+											<span class="voccheckbox"><%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]",
+																				  	answer.id,
+																				  	false,
+																				  	:id => "answer_#{answer.id}",
 																				  	:class => "question_#{element.assetable.question_content.id}_answer",
 																				  	:checked=> answer.is_default || (params[element.assetable.statement.gsub('?', '').gsub(' ', '_').downcase.to_s] == answer.answer) %>
 											<%= label_tag "answer_#{answer.id}", sanitize(answer.answer, :attributes => %w(id class target style href)) %></span>
@@ -111,7 +111,7 @@
 										<% end -%>
 									</div>
 								<% end # if ChoiceQuestion %>
-							
+
 							<% elsif element.assetable_type == "TextQuestion" %>
 								<% if element.assetable.answer_type == "field" %>
 									<span class="voctextfield"><%= text_field_tag answer_tag_id, nil, :class => "text_question_field question_#{element.assetable.question_content.id}_answer" %></span>
@@ -121,26 +121,29 @@
 							<% end -%>
 						<% else %>
               				<%= element.assetable.snippet.html_safe%>
-						<% end %>			
+						<% end %>
 					</li>
 					<% index = index + 1%>
 				<% end %>
 				</ul>
 				<div class="surveyNav">
+          <% previous_page_text = @survey.previous_page_text || "Previous Page" %>
 					<% unless page.page_number == 1 or (params[:noback].to_s.downcase=="true") %>
-						<span class="surveyNavPrev"><%= link_to_function "Previous Page", "show_prev_page(#{page.page_number})", :class=>"surveyNav"  %></span> |
+						<span class="surveyNavPrev"><%= link_to_function previous_page_text, "show_prev_page(#{page.page_number})", :class=>"surveyNav"  %></span> |
 					<% end %>
+          <% next_page_text = @survey.next_page_text || "Next Page" %>
 					<% unless page.page_number == @survey_version.pages.count %>
-						<span class="surveyNavNext"><%= link_to_function "Next Page", "show_next_page(#{page.page_number})", :class=>"surveyNav" %></span>
+						<span class="surveyNavNext"><%= link_to_function next_page_text, "show_next_page(#{page.page_number})", :class=>"surveyNav" %></span>
 					<% end %>
-					<span class="surveyNavSub"><%= submit_tag("Submit Survey", :onclick=>"return validate_before_submit(#{page.page_number})")if page.page_number == @survey_version.pages.count %></span>
+          <% submit_button_text = @survey.submit_button_text || "Submit Survey" %>
+					<span class="surveyNavSub"><%= submit_tag(submit_button_text, :onclick=>"return validate_before_submit(#{page.page_number})")if page.page_number == @survey_version.pages.count %></span>
 				</div>
-				
+
 			</div> <!-- close page div -->
 		<% end -%>
 	<% end -%>
 <% end -%>
-<!-- 
+<!--
 <div class="pageNav">
 	<%= link_to "View All", surveys_url, :class => "pageNav" %>
 </div> -->
