--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -138,7 +138,13 @@
           <% submit_button_text = @survey.submit_button_text.blank? ? "Submit Survey" : @survey.submit_button_text %>
 					<span class="surveyNavSub"><%= submit_tag(submit_button_text, :onclick=>"return validate_before_submit(#{page.page_number})")if page.page_number == @survey_version.pages.count %></span>
 				</div>
-
+        <script>
+        <% if @survey.js_required_fields_error.blank? %>
+        var survey_required_fields_error = "Please answer all required questions before moving on to the next page."
+        <% else %>
+        var survey_required_fields_error = "<%= @survey.js_required_fields_error %>";
+        <% end %>
+        </script>
 			</div> <!-- close page div -->
 		<% end -%>
 	<% end -%>
