--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -86,7 +86,7 @@
       var _url = "http://"+ _hostname + "/surveys/" + _surveyID + ".json";
       var target = jQuery("#" + _targetID)
       var surveyID = _surveyID
-      
+
       /* get the survey identified by id _surveyID and insert it into the */
       /* DOM element _targetID.                                           */
       jQuery.getJSON(_url, "callback=?&page_url=" + _pageURL, function(data){
@@ -94,12 +94,12 @@
       });
 
       jQuery(document).on("submit", "#"+_targetID+" form", function(){
-      
+
         // create and post to a hidden iframe to avoid cross-domain POST limitations
         var iframe = jQuery("<iframe>");
         var uniqueString = "surveyPostContainerIframe";
         var form = target.children("form").first();
-        
+
         // add the hidden iframe
         jQuery("body").append(iframe);
         iframe.hide();
@@ -139,20 +139,20 @@
 /******************* Survey.js ******************************************/
 function show_next_page(page){
   var required_unanswered = false;
-  
+
   required_unanswered = check_for_unanswered_required(page);
-  
+
   if (!required_unanswered){
     jQuery("#page_" + page).hide();
     var next_page = jQuery("#page_" + page + "_next_page").val();
-    
+
     /* Set the prev page on next page */
    set_prev_page(page, next_page);
-    
-    jQuery("#page_"+ next_page).show();  
+
+    jQuery("#page_"+ next_page).show();
     window.location.hash="PAGE_" + next_page;
   } else {
-    alert('Please answer all required questions before moving on to the next page.');
+    alert(survey_required_fields_error);
   }
 
 }
@@ -188,7 +188,7 @@ function check_for_unanswered_required(page) {
           required =  true;
         } else if( jQuery(".question_" + question_number + "_answer").attr('type') == "textarea" && jQuery(".question_" + question_number + "_answer").val() == "") {
           required =  true;
-        } 
+        }
       }
     });
     return required;
@@ -198,7 +198,7 @@ function validate_before_submit(page){
   if (!check_for_unanswered_required(page)){
     return true;
   } else {
-    alert('Please answer all required questions before moving on to the next page.');
+    alert(survey_required_fields_error);
     return false;
   }
 
