--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -203,7 +203,7 @@
   function enterButtonModal() {
       // BEGIN logic for executing the Enter button action for the modal window
       var pageurl  = window.location.origin + window.location.pathname;
-      var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?" + pageurl;
+      var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?";
       <% if params[:stylesheet] %>
       popurl = popurl + "stylesheet=<% params[:stylesheet] %>&";
       <% end %>
