--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -11,6 +11,9 @@
 <% else %>
 	<%= form_tag url_for(:controller => "survey_responses", :action => "create") do %>
 	  <%= hidden_field_tag :stylesheet, params[:stylesheet] %>
+    <%= hidden_field_tag :uuid_key, @uuid_key %>
+    <%= hidden_field_tag "survey_id", @survey.id %>
+    <%= hidden_field_tag "survey_version_id", @survey_version.id %>
 		<%= hidden_field_tag "response[page_url]", params[:page_url] %>
 	  <% index = 0 %>
 		<% for page in @survey_version.pages %>
@@ -20,7 +23,6 @@
 	      <%= hidden_field_tag :next_page, page.next_page.try(:page_number), :id => "page_#{page.page_number}_next_page" %>
 				<%= hidden_field_tag :prev_page, (params[:page].present? && params[:page].to_i == page.page_number ? 1 : page.prev_page.try(:page_number)), :id => "page_#{page.page_number}_prev_page" %>
 
-				<%= hidden_field_tag "survey_version_id", @survey_version.id %>
 				<ul class="showList">
 				<% page.survey_elements.order("element_order asc").each do |element| %>
 					<li class="outter">
