--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -9,8 +9,13 @@
     <% if browser.mobile? || browser.tablet? %>
       jQuery('#<%= params[:mobile_target_id] %>').show();
       jQuery('#<%= params[:mobile_target_id] %>').click(function() {
-        window.location.href = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>";
-      });
+        var pageurl  = window.location.origin + window.location.pathname;
+        var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?";
+        <% if params[:stylesheet] %>
+            popurl = popurl + "stylesheet=<%= params[:stylesheet] %>&";
+        <% end %>
+        popurl = popurl + "page_url=" + pageurl;
+        window.location.href = popurl;
     <% else %>
       var cookieName = 'survey_invitation_<%= params[:survey_id] %>';
       var invitationInterval = <%= @survey.invitation_interval %>;
@@ -205,7 +210,7 @@
       var pageurl  = window.location.origin + window.location.pathname;
       var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?";
       <% if params[:stylesheet] %>
-      popurl = popurl + "stylesheet=<% params[:stylesheet] %>&";
+      popurl = popurl + "stylesheet=<%= params[:stylesheet] %>&";
       <% end %>
       popurl = popurl + "page_url=" + pageurl;
       window.open(popurl,"","width=600,height=500,scrollbars,");
