--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -208,7 +208,7 @@
   function enterButtonModal() {
       // BEGIN logic for executing the Enter button action for the modal window
       var pageurl  = window.location.origin + window.location.pathname;
-      var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?";
+      var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/holding_page?"
       <% if params[:stylesheet] %>
       popurl = popurl + "stylesheet=<%= params[:stylesheet] %>&";
       <% end %>
@@ -232,7 +232,10 @@
       var o = obj.find('*');
 
       // Safari and VoiceOver shim
-      // if VoiceOver in Safari is used, set the initial focus to the modal window itself instead of the first keyboard focusable item. This causes VoiceOver to announce the aria-labelled attributes. Otherwise, Safari and VoiceOver will not announce the labels attached to the modal window.
+      // if VoiceOver in Safari is used, set the initial focus to the modal window itself instead of
+      // the first keyboard focusable item. This causes VoiceOver to announce the aria-labelled
+      // attributes. Otherwise, Safari and VoiceOver will not announce the labels attached to the
+      // modal window.
 
       // set the focus to the first keyboard focusable item
       o.filter(focusableElementsString).filter(':visible').first().focus();
