--- a/app/views/surveys/holding_page.html.erb
+++ b/app/views/surveys/holding_page.html.erb
@@ -1,1 +1,48 @@
-<%= link_to 'Start Survey', survey_path(@survey, page_url: params[:page_url], stylesheet: params[:stylesheet]) %>
+<style>
+.content {
+  margin: 25px 15px 25px 15px;
+}
+.banner {
+  display: block;
+  margin: 0 auto 10px auto;
+}
+.message {
+  margin: 15px 0 15px 0;
+}
+.footer {
+
+}
+.float-right {
+  float: right;
+}
+.privacy-policy {
+  text-decoration: none;
+  color: blue;
+  font-size: .9em;
+}
+.start-survey {
+  display: block;
+  margin: 25px auto 25px auto;
+  width: 150px;
+  font-size: 1.2em;
+}
+</style>
+<div class='content'>
+  <% if browser.mobile? || browser.tablet? %>
+    <%= image_tag 'http://www.usa.gov/resources/images/usagov_logo1.gif', class: 'banner' %>
+  <% else %>
+    <%= image_tag 'http://www.usa.gov/resources/images/usagov_logo-mobile.gif', class: 'banner' %>
+  <% end %>
+
+  <div class='message'>
+    If your visit to our website is already complete, click 'Start Survey'. Otherwise, minimize this
+    window and return when you have completed your visit.
+  </div>
+
+  <%= button_to 'Start Survey', survey_path(@survey, page_url: params[:page_url],
+    stylesheet: params[:stylesheet]), method: :get, class: 'start-survey' %>
+
+  <div class='footer'>
+    <%= link_to 'Privacy Policy', nil, class: 'float-right privacy-policy' %>
+  </div>
+</div>
