use post routes to increment visit counts

--- a/app/views/widget/_invite_modal.html.erb
+++ b/app/views/widget/_invite_modal.html.erb
@@ -49,7 +49,6 @@
   }
 
 </style>
-<iframe src="http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/invitation" style="display: none;"></iframe>
 <div id='vocModal' aria-hidden='true' aria-labelledby='modalTitle' aria-describedby='modalDescription' role='dialog'>
   <p>
     <%= invitation_text.html_safe %>
@@ -58,3 +57,7 @@
   <input type="button" name="vocCancelButton" id="vocCancelButton" value="<%= invitation_reject_button_text %>">
 </div>
 <div id='vocModalOverlay' tabindex='-1'></div>
+
+<script type='text/javascript'>
+  jQuery.post('<%= invitation_survey_url(@survey) %>')
+</script>
