--- a/app/views/surveys/_start_survey_button.html.erb
+++ b/app/views/surveys/_start_survey_button.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag survey_path(@survey), method: :get do %>
   <%= hidden_field_tag :stylesheet, params[:stylesheet] %>
   <%= hidden_field_tag :page_url, params[:page_url] %>
-  <%= submit_tag :submit, class: 'start-survey' %>
+  <%= submit_tag 'Start', class: 'start-survey' %>
 <% end %>
