--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -29,7 +29,10 @@
 						end %>
 						<% if element.assetable_type == "MatrixQuestion" %>
 							<% if element.assetable_type != 'Asset'  %>
-								<span class="vocquestionnumber"><%= "#{question_number}." %></span><%= element.assetable.question_content.statement %>
+								<% if @survey.show_numbers? %>
+									<span class="vocquestionnumber"><%= "#{question_number}." %></span>
+								<% end %>
+								<%= element.assetable.question_content.statement %>
 							<% end %>
 			              <table>
 			                <tr>
@@ -65,7 +68,11 @@
 							   	answer_tag_id = "response[raw_responses_attributes][#{index}][answer][]"
 							   end -%>
 
-							<div class="vocquestiontext"><span class="vocquestionnumber"><%= "#{question_number}." %> </span>
+							<div class="vocquestiontext">
+								<% if @survey.show_numbers? %>
+									<span class="vocquestionnumber"><%= "#{question_number}." %> </span>
+								<% end %>
+
 							<%= answer_tag_id ? label_tag(answer_tag_id, element.assetable.question_content.statement) : element.assetable.question_content.statement %>
 							<%= "*" if element.assetable.question_content.required%></div>
 							<% if element.assetable_type == "ChoiceQuestion" %>
