--- a/app/views/widget/_invite_modal.html.erb
+++ b/app/views/widget/_invite_modal.html.erb
@@ -30,6 +30,14 @@
       text-align:center;
   }
 
+  #vocEnter {
+    cursor: pointer;
+  }
+
+  .vocCancelButton {
+    cursor: pointer;
+  }
+
   .banner {
     padding-bottom: 10px;
     border-bottom: 1px solid black;
