--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -6,17 +6,24 @@
   /* main - Main function for the voc invitation.  This function is called once */
   /* jQuery has been loaded.                                                */
   function main() {
-    <% if browser.mobile? || browser.tablet? %>
-      jQuery('#<%= params[:mobile_target_id] %>').show();
-      jQuery('#<%= params[:mobile_target_id] %>').click(function() {
-        var pageurl  = window.location.origin + window.location.pathname;
-        var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?";
-        <% if params[:stylesheet] %>
-            popurl = popurl + "stylesheet=<%= params[:stylesheet] %>&";
-        <% end %>
-        popurl = popurl + "page_url=" + pageurl;
-        window.location.href = popurl;
-    <% else %>
+
+    if(jQuery.browser.mobile) {
+      var $target = jQuery('#<%= params[:mobile_target_id] %>');
+      var targetHTML = $target.html();
+      console.log(targetHTML);
+      var pageurl  = window.location.origin + window.location.pathname;
+      var popurl = "http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>?";
+      <% if params[:stylesheet] %>
+          popurl = popurl + "stylesheet=<%= params[:stylesheet] %>&";
+      <% end %>
+      popurl = popurl + "page_url=" + pageurl;
+
+      var aTag = "<a href='" + popurl + "' target='_blank'>" + targetHTML + "</a>";
+
+      $target.html(aTag);
+
+    } else {
+      jQuery('#<%= params[:mobile_target_id] %>').hide();
       var cookieName = 'survey_invitation_<%= params[:survey_id] %>';
       var invitationInterval = <%= @survey.invitation_interval %>;
       if(invitationInterval == 0 || readCookie(cookieName) == null) {
@@ -33,7 +40,7 @@
           }
         }
       }
-    <% end %>
+    }
   }
 
   function createCookie(name,value,days) {
